Added event-router-kafka and updated documentation